# ssl_assessment

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: defaults.yaml  paths.yaml
configs/experiments/: baseline.yaml  ft.yaml  ratio_ablation.yaml  reviewer_controls.yaml
configs/models/: hubert_base.yaml  hubert_large.yaml  w2v2_base.yaml  w2v2_large_lv60.yaml  w2v2_large_robust.yaml  wavlm_base.yaml  wavlm_base_plus.yaml  wavlm_large.yaml
configs/pairs/: qs_cont_to_sap_nat_neg.yaml  qs_cont_to_sap_sil.yaml  qs_dist_to_sap_cons.yaml  qs_dist_to_sap_sil_neg.yaml  qs_dist_to_sap_vowel.yaml  qs_effort_to_sap_intel.yaml  qs_nat_to_sap_nat.yaml  qs_overall_to_sap_intel.yaml
configs/suite/: ablation_all_models.yaml  all.yaml  baselines.yaml  main.yaml  reviewer.yaml  smoke.yaml
configs/tasks/: sap_distorted_vowels.yaml  sap_imprecise_consonants.yaml  sap_inappropriate_silences.yaml  sap_intelligibility.yaml  sap_naturalness.yaml
elements/: codex_plan_qualispeech_sap_hf_only.md  dev_dir_arch.txt  e284430e-a76d-434a-e67a-08db2d6a5da8.json  qualispeech_dir_arch.txt  train_dir_arch.txt
scripts/: export_figures.py  export_tables.py  package_report.py  prepare_all.py  run_experiment.py  run_pipeline.py  run_suite.py  summarize_results.py
src/: __init__.py
src/analysis/: __init__.py  breakdowns.py  (+2 more)
tests/: __init__.py  conftest.py  test_audio_cache.py  test_config_paths.py  test_hf_backbone.py  test_io_contracts.py  test_pair_builder.py  test_pipeline_semantics.py  test_qs_parser.py  test_sap_parser.py  test_summary.py  test_train_smoke.py
(+36 files in other folders)
